# deepgem

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  dg.bat  easy.bat  install.sh  pyproject.toml  quickinstall.bat
.claude/: settings.local.json
.github/workflows/: publish.yml
src/deepgem/: __main__.py  cli.py
tests/: test_smoke.py
